# olta-vm

./: .env.example  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  docker-compose.yml
benchmarks/: create_document_latency.py  measure_ws_latency.sh
crates/server/: Cargo.toml
crates/server/src/: main.rs  messages.rs  server.rs  types.rs  utils.rs  ws.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_initial.sql
crates/storage/src/: db.rs  lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: errors.rs  lib.rs  types.rs  vm.rs
infra/: olta.service
