[workspace]
members = [
    "crates/vm",       
    "crates/server", 
    "crates/storage"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
tokio-tungstenite = "0.28.0"
uuid = {version = "1.18.1", features = ["v4"]}
futures-util = "0.3.31"
url = "2.5.7"
dotenvy = "0.15.7"
