[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
futures-util = {workspace = true}
url = {workspace = true}
tokio-tungstenite = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
dotenvy = {workspace = true}

vm = { path = "../vm"}
storage = { path = "../storage"}