[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
vm = {path = "../vm"}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
dotenvy = {workspace = true}

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
